force-app/main/default/objects/inspire1__User_Preferences__c/inspire1__User_Preferences__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - Used to track user preferences related to Inspire Planner.</description>
    <label>User Preferences</label>
    <nameField>
        <displayFormat>IP-UP{000000}</displayFormat>
        <label>User Preferences ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>