force-app/main/default/objects/inspire1__User_Preferences__c/fields/inspire1__LWC_Settings__c.field-meta.xml
<CustomField>
    <fullName>inspire1__LWC_Settings__c</fullName>
    <label>LWC Settings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>