force-app/main/default/objects/inspire1__User_Preferences__c/fields/inspire1__Project_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project_Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Portfolio</label>
    <referenceTo>inspire1__Project_Portfolio__c</referenceTo>
    <relationshipLabel>User Preferences</relationshipLabel>
    <relationshipName>User_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>