force-app/main/default/objects/inspire1__User_Preferences__c/fields/inspire1__Related_To__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Related_To__c</fullName>
    <label>Related To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>