force-app/main/default/objects/inspire1__User_Preferences__c/fields/inspire1__Settings__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Settings__c</fullName>
    <description>Settings related to user preference.</description>
    <label>Settings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>