force-app/main/default/objects/inspire1__User_Preferences__c/fields/inspire1__Type__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Type__c</fullName>
    <description>Defines the type of preference.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kanban</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Resource Allocation List</fullName>
            </value>
            <value>
                <fullName>Portfolio Dashboard</fullName>
            </value>
            <value>
                <fullName>Time Tracker</fullName>
            </value>
            <value>
                <fullName>Weekly Time Tracker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>