force-app/main/default/objects/inspire1__User_Preferences__c/fields/inspire1__User__c.field-meta.xml
<CustomField>
    <fullName>inspire1__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User the preference is related to.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>