force-app/main/default/objects/inspire1__User_Preferences__c/fields/inspire1__Week_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Week_Start_Date__c</fullName>
    <label>Week Start Date</label>
    <type>Date</type>
</CustomField>