force-app/main/default/objects/inspire1__User_Preferences__c/listViews/inspire1__All.listView-meta.xml
<ListView>
    <fullName>inspire1__All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>inspire1__Project_Portfolio__c</columns>
    <columns>inspire1__Settings__c</columns>
    <columns>inspire1__Type__c</columns>
    <columns>inspire1__User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>