force-app/main/default/objects/inspire1__User_Preferences__c/listViews/inspire1__All1.listView-meta.xml
<ListView>
    <fullName>inspire1__All1</fullName>
    <columns>NAME</columns>
    <columns>inspire1__User__c</columns>
    <columns>inspire1__Type__c</columns>
    <columns>inspire1__Week_Start_Date__c</columns>
    <columns>inspire1__Settings__c</columns>
    <columns>inspire1__Project_Portfolio__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>